--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,5 +1,5 @@
 .navigation{
-    
+    overflow-x: hidden;
     
     &__checkbox{
         display: none;
@@ -31,6 +31,7 @@
     }
 
     &__background{
+        overflow-x: hidden;
         height: 6rem;
         width: 6rem;
         border-radius: 50%;
@@ -53,7 +54,9 @@
     }
 
     &__nav{
-        height: 100vh;
+        overflow-x: hidden;
+        width: 100%;
+        height: 100%;
         position: fixed;
         top:0;
         right: 0;
@@ -65,6 +68,7 @@
     }
 
     &__list{
+        overflow-x: hidden;
         position: absolute;
         top: 50%;
         left: 50%;
